--- a/pom.xml
+++ b/pom.xml
@@ -14,19 +14,26 @@
               <artifactId>maven-compiler-plugin</artifactId>
               <version>2.0.2</version>
               <configuration>
-                  <source>1.5</source>
-                  <target>1.5</target>
+                  <source>1.6</source>
+                  <target>1.6</target>
               </configuration>
           </plugin>
       </plugins>
   </build>
+  <repositories>
+      <repository>
+          <id>CraftBukkit</id>
+          <url>http://repo.bukkit.org/content/groups/public</url>
+      </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.3.2-R0.2-SNAPSHOT</version>
+      <version>1.7.9-R0.3-SNAPSHOT</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
+
