--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>Tether</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Tether</name>
-  <url>https://github.com/bluekelp/bukkit-tether</url>
+  <url>https://github.com/bluekelp/Tether</url>
   <build>
     <!-- default is "${project.artifactId}-${project.version}" -->
     <finalName>${project.artifactId}</finalName>  <!-- name JAR something like <ArtifactId>.jar - no version -->
